Changelog v1.6.2:
* Soporte para emojis

Changelog v1.6.1:
* Modificacion modulo de Colegio
	- Búsqueda de historial de estudios terciarios
* Actualización proceso de carga de datos
* Corrección de errores

Changelog v1.6:

* Fecha de actualizacion de base de datos en inicio
* Personalización de nombre de usuarios en inicio
* Bootstrap icons actualizados a versión 1.9.1
* Corrección de errores

Changelog v1.5:

* Nuevo logo
* Nuevo modulo de ajustes
	- Nuevo tema oscuro
* Nuevo modulo de Empleos
	- Búsqueda de altas y bajas laborales
* Nuevo modulo de Colegio
	- Búsqueda de historial de estudios primarios, secundarios y universitarios
* Bootstrap icons actualizados a versión 1.8.2
* Bootstrap actualizado a versión 4.6.1
* Actualización proceso de carga de datos
* Actualización proceso de mantenimiento de datos
* Corrección de errores

En desarrollo:
* Nuevo modulo de recuperación de clave personal