@@ -5,6 +5,9 @@
 
 [![License: AGPL v3](https://img.shields.io/badge/License-AGPL%20v3-blue.svg)](https://www.gnu.org/licenses/agpl-3.0)
 
+Changelog v1.6.3:
+* Corrección de errores
+
 Changelog v1.6.2:
 * Soporte para emojis
 
