@@ -20,7 +20,7 @@ require_once('./include/navbar.php');
             <a class="btn btn-outline-dark d-print-none" href="#" onclick="print()" data-tooltip="tooltip" data-placement="top" title="Imprimir"><i class="bi bi-printer"></i></a>
         </div>
         <div class="alert alert-primary mb-4" role="alert">
-            <i class="bi bi-info-circle"></i> <strong>Información:</strong> Los datos visualizados pertenecen al interno <?php echo utf8_encode($row["Nombre"]). "\n"; ?>
+            <i class="bi bi-info-circle"></i> <strong>Información:</strong> Los datos visualizados pertenecen al interno <?php echo $row["Nombre"]. "\n"; ?>
         </div>
         <?php
             }
@@ -32,17 +32,17 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Taller</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["Taller"]). "\n"; ?>
+				<?php echo $row["Taller"]. "\n"; ?>
 		    </div>
             <div class="col-sm-3 mb-1">
 				<span><small><strong>Unidad</strong></small></span>
 				<br>
-                <?php echo utf8_encode($row["Unidad"]). "\n"; ?>
+                <?php echo $row["Unidad"]. "\n"; ?>
 			</div>		
 			<div class="col-sm-2 mb-1">
 				<span><small><strong>Entidad</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["Entidad"]). "\n"; ?>
+				<?php echo $row["Entidad"]. "\n"; ?>
 			</div>
 			<div class="col-sm-2 mb-1">
 				<span><small><strong>Desde</strong></small></span>
@@ -69,7 +69,7 @@ require_once('./include/navbar.php');
 					} elseif ($row["Estado"] == 'FINALIZADO') {
 						echo '<span class="badge bg-success text-white">FINALIZADO</span>'. "\n";
 					} else {
-						echo '<span class="badge bg-warning text-white">'.utf8_encode($row["Estado"]).'</span>'. "\n";
+						echo '<span class="badge bg-warning text-white">'.$row["Estado"].'</span>'. "\n";
 					}
                 ?>
 			</div>
@@ -77,7 +77,7 @@ require_once('./include/navbar.php');
 				<span><small><strong>Observaciones</strong></small></span>
 				<br>
 				<?php
-                    echo utf8_encode($row["Motivo"]). "\n";
+                    echo $row["Motivo"]. "\n";
                 ?>
 			</div>
 		</div>     
