@@ -34,7 +34,7 @@ require_once('./include/navbar.php');
 			<a class="btn btn-outline-dark d-print-none" href="#" onclick="print()" data-tooltip="tooltip" data-placement="top" title="Imprimir"><i class="bi bi-printer"></i></a>
         </div>
         <div class="alert alert-primary mb-4" role="alert">
-            <i class="bi bi-info-circle"></i> <strong>Información:</strong> Los datos visualizados pertenecen al interno <?php echo utf8_encode($row["interno"]). "\n"; ?>
+            <i class="bi bi-info-circle"></i> <strong>Información:</strong> Los datos visualizados pertenecen al interno <?php echo $row["interno"]. "\n"; ?>
         </div>
 		<h5 class="text-secondary">Datos Personales</h5>
 		<div class="row mb-2">
@@ -46,12 +46,12 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Interno</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["interno"]). "\n"; ?>
+				<?php echo $row["interno"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Alias</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["alias"]). "\n"; ?>
+				<?php echo $row["alias"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>F. Nacimiento</strong></small></span>
@@ -63,7 +63,7 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Domicilio</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["domicilio"]).", ".utf8_encode($row["localidad"]). "\n"; ?>
+				<?php echo $row["domicilio"].", ".$row["localidad"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 			    <span><small><strong>Nacionalidad</strong></small></span>
@@ -73,12 +73,12 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Estudios</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["estudios"]). "\n"; ?>
+				<?php echo $row["estudios"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Oficio</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["oficio"]). "\n"; ?>
+				<?php echo $row["oficio"]. "\n"; ?>
 			</div>
 		</div>
 		<div class="row mb-2">
@@ -111,12 +111,12 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Procedente</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["procedente"]). "\n"; ?>
+				<?php echo $row["procedente"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Régimen</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["regimen"]). "\n"; ?>
+				<?php echo $row["regimen"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Peligrosidad</strong></small></span>
@@ -133,7 +133,7 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Conducta</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["conducta"]). "\n"; ?>
+				<?php echo $row["conducta"]. "\n"; ?>
 			</div>
 		</div>
 		<hr>
@@ -142,12 +142,12 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Sector</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["trabajo"]). "\n"; ?>
+				<?php echo $row["trabajo"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Puesto</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["puesto"]). "\n"; ?>
+				<?php echo $row["puesto"]. "\n"; ?>
 			</div>
 		</div>
 		<hr>
@@ -161,29 +161,29 @@ require_once('./include/navbar.php');
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Caratula</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["Caratula"]). "\n"; ?>
+				<?php echo $row["Caratula"]. "\n"; ?>
 			</div>
 		    <div class="col-sm-3 mb-1">
 				<span><small><strong>Juzgado</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["juzgado"]). "\n"; ?>
+				<?php echo $row["juzgado"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Depto. Judicial</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["deptojudicial"]). "\n"; ?>
+				<?php echo $row["deptojudicial"]. "\n"; ?>
 			</div>
 		</div>
 		<div class="row mb-2">
 		    <div class="col-sm-3 mb-1">
 				<span><small><strong>Situación</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["Situacion"]). "\n"; ?>
+				<?php echo $row["Situacion"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Condena</strong></small></span>
 				<br>
-				<?php echo utf8_encode($row["Condena"]). "\n"; ?>
+				<?php echo $row["Condena"]. "\n"; ?>
 			</div>
 			<div class="col-sm-3 mb-1">
 				<span><small><strong>Reincidencia</strong></small></span>
