@@ -1,3 +1,6 @@
+Changelog v1.6.3:
+* Corrección de errores
+
 Changelog v1.6.2:
 * Soporte para emojis
 
